test/functional/failtests/lambdas/tuple.paramCountMismatch.txt
TypeError: Lambda function expected inferred type with 0 arguments, 1 found
1 | func main() {
2 |     tuple<func<int, int>>:x = [:(): 123];
  |                                 ^ (2:33)
3 | }

